work on getting logs
